--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
+    <script src="http://cdn.date-fns.org/v1.9.0/date_fns.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
     <!-- TODO: Add SDKs for Firebase products that you want to use
