--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     <script>
       // Your web app's Firebase configuration
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      var firebaseConfig = {
-        apiKey: "AIzaSyDjRCytiEijO0tycsZaHGeo2bldpFCn0sw",
-        authDomain: "chat-17661.firebaseapp.com",
-        projectId: "chat-17661",
-        storageBucket: "chat-17661.appspot.com",
-        messagingSenderId: "684671135575",
-        appId: "1:684671135575:web:528fb98284cf4ee6b0d812",
-        measurementId: "G-4TV1PP52GL",
+      const firebaseConfig = {
+        apiKey: "AIzaSyATDrkJEONqVvvlaC13Ab3rZJkueE5ry1s",
+        authDomain: "chat-cda5f.firebaseapp.com",
+        projectId: "chat-cda5f",
+        storageBucket: "chat-cda5f.appspot.com",
+        messagingSenderId: "844473019880",
+        appId: "1:844473019880:web:ea8b56814456b83ed9085d",
+        measurementId: "G-X7NXR7ZY8W"
       };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
